# ml_ramverk_l3_Jasmin

./: .gitignore  Dockerfile  README.md  api.py  dataset.py  experiments.py  export_onnx.py  main.py  model.py  pyproject.toml  train.py
